<resources>
    <string name="app_name">FYSS</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="fetch">Fetch</string>
    <string name="icon">icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_Account">No account yet? Create one</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="logout">Logout</string>
    <string name="code">Code:</string>
    <string name="phone_number">Phone Number</string>
    <string name="reg_warn_1">Please fill remaining text boxes.</string>
    <string name="title_activity_dashboard_sy">DashboardSyActivity</string>
    <string name="tab_text_1">Meetings</string>
    <string name="tab_text_2">Posts</string>
    <string name="tab_text_3">My Group</string>
    <string name="tab_text_4">NFC</string>
    <string name="tab_text_5">Manual</string>


    <string-array name="buildings">
        <item>Computer Science</item>
        <item>Foundation</item>
        <item>Main</item>
        <item>Schumann</item>
        <item>Kemmy Business School</item>
        <item>Tierney</item>
        <item>Glucksman Library</item>
        <item>Health Sciences</item>
        <item>Schrödinger</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item">Item</string>
    <string name="profilepic">profilePic</string>
    <string name="choose_building">Choose Building</string>
    <string name="meetingimg">meetingImg</string>
    <string name="week_number">Week Number:</string>
    <string name="meeting_no">Meeting No:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="building">Building</string>
    <string name="room">Room</string>
    <string name="delete_button">delete button</string>
    <string name="textview">TextView</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="instagram">Instagram</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="meeting_1">Meeting 1</string>
    <string name="attendance">Attendance</string>
    <string name="button">Button</string>
    <string name="send_file">Send File</string>
    <string name="week">Week</string>
    <string name="rooma">Room:</string>
    <string name="buildinga">Building:</string>
    <string name="description">Description</string>
    <string name="info">Info</string>
    <string name="are_you_a_second_year_student_leader">Are you a second year student leader?</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here.</string>
    <string name="hold_devices_together_to_sign_in">Hold devices together to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="check_boxes_manually_or_via_nfc">Check boxes manually or via NFC.</string>
    <string name="edit_meeting_information">Edit Meeting Information</string>
    <string name="edit_info">Edit Info</string>
    <string name="topic">Topic</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="check_boxes_to_submit_attendance_record">Check boxes to submit attendance record.</string>
    <string name="move_devices_together_to_record_attendance">Move devices together to record attendance.</string>
    <string name="title_activity_attend">attend</string>
    <string name="qualtrics">Qualtrics</string>
    <string name="pva">PVA</string>
    <string name="create_post">Create Post</string>
    <string name="create_new_post">Create New Post</string>
    <string name="nuMeeting">Create New Meeting</string>
    <string name="contact_info">Contact Info:</string>
    <string name="title_activity_maps">Map</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
