<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="10dp">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/buildinga"
                android:textSize="24sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/buildingsId"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:entries="@array/buildings"
                android:prompt="@string/choose_building"
                android:visibility="gone" />

            <TextView
                android:id="@+id/rt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/rooma"
                android:textSize="24sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/roomNo"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="gone"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/wt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/week_number"
                android:textSize="24sp"
                android:visibility="gone" />

            <NumberPicker
                android:id="@+id/weekNo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/topic"
                android:textSize="24sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/topicTxt"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="gone"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/description"
                android:textSize="24sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/descTxt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:visibility="gone"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/secondary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:background="?attr/secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="366dp"
        tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/titleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_meeting_information"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/delBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="end"
            android:background="?attr/secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bin"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="366dp"
            tools:layout_editor_absoluteY="10dp" />
    </androidx.appcompat.widget.Toolbar>

    <DatePicker
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:headerBackground="?attr/primary"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:headerBackground="?attr/primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp">

            <TextView
                android:id="@+id/dateId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPurple"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="51dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="690dp" />

            <TextView
                android:id="@+id/timeId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/time"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="56dp"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="690dp" />

            <TextView
                android:id="@+id/infoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/info"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="84dp"
                tools:layout_editor_absoluteX="123dp"
                tools:layout_editor_absoluteY="690dp" />

            <TextView
                android:id="@+id/descId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                tools:layout_conversion_absoluteHeight="27dp"
                tools:layout_conversion_absoluteWidth="59dp"
                tools:layout_editor_absoluteX="270dp"
                tools:layout_editor_absoluteY="690dp" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>